# subject-tracking

./: .gitignore  README.md  layout.json  pixi.toml  spec.yaml  test-cases.yaml
.github/workflows/: ci.yml  tag.yml
__results_snapshots__/__results_snapshots__/all-grouper/: test_dashboard_json.json
__results_snapshots__/all-grouper/: test_dashboard_json[data].json  test_dashboard_json[nodata].json
__results_snapshots__/month-grouper/: test_dashboard_json.json  test_dashboard_json[data].json  test_dashboard_json[nodata].json
__results_snapshots__/spatial-grouper/: test_dashboard_json[data].json  test_dashboard_json[nodata].json
__results_snapshots__/task-instance-error/: test_failure_response[data-sequential].json  test_failure_response[sequential].json
__results_snapshots__/value-grouper/: test_dashboard_json.json  test_dashboard_json[data].json  test_dashboard_json[nodata].json
dev/: curl-invoke-docker.sh  pytest.sh
ecoscope-workflows-subject-tracking-workflow/: .dockerignore  Dockerfile  README.md  VERSION.yaml  pixi.toml  pyproject.toml
ecoscope-workflows-subject-tracking-workflow/ecoscope_workflows_subject_tracking_workflow/: app.py  cli.py  dispatch.py  formdata.py  params.json  params.py  response.py  rjsf.json
ecoscope-workflows-subject-tracking-workflow/ecoscope_workflows_subject_tracking_workflow/dags/: __init__.py  jupytext.py  run_async.py  run_async_mock_io.py  run_sequential.py  run_sequential_mock_io.py
ecoscope-workflows-subject-tracking-workflow/tests/: conftest.py  test_app.py  test_cli.py  test_metadata.py  test_results.py
terraform/environments/: terragrunt.hcl
terraform/environments/dev/: terragrunt.hcl
terraform/environments/dev-preview/: terragrunt.hcl
terraform/environments/prod/: terragrunt.hcl
terraform/environments/stage/: terragrunt.hcl
terraform/modules/: cloud-run.tf  cloud-scheduler.tf  iam.tf  pubsub.tf  variables.tf
